tests/rosetta/out/Pascal/arithmetic-geometric-mean-calculate-pi.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/arithmetic-geometric-mean-calculate-pi.pas
arithmetic-geometric-mean-calculate-pi.pas(22,12) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(26,20) Note: Call to subroutine "operator +(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(26,20) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(26,34) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(26,24) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(26,34) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(29,13) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
arithmetic-geometric-mean-calculate-pi.pas(45,10) Error: Operator is not overloaded: "ShortInt" div "Double"
arithmetic-geometric-mean-calculate-pi.pas(46,10) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Double is nested;Register>"
arithmetic-geometric-mean-calculate-pi.pas(50,16) Error: Operator is not overloaded: "Double" div "ShortInt"
arithmetic-geometric-mean-calculate-pi.pas(56,16) Error: Operator is not overloaded: "<procedure variable type of function(Variant):Double is nested;Register>" + "Double"
arithmetic-geometric-mean-calculate-pi.pas(58,19) Error: Operator is not overloaded: "Double" div "ShortInt"
arithmetic-geometric-mean-calculate-pi.pas(71) Fatal: There were 5 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
