tests/rosetta/out/Pascal/arithmetic-geometric-mean-calculate-pi.pas
// Generated by Mochi compiler v0.10.30 on 1970-01-01T00:00:00Z
program ArithmeticGeometricMeanCalculatePi;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, Classes, Variants;

type
  generic TArray<T> = array of T;

function abs(x: double): double;
begin
  if (x < 0) then ;
  result := x;
  exit;
end;

function sqrtApprox(x: double): double;
var
  guess: Variant;
  i: integer;
begin
  guess := x;
  i := 0;
  while (i < 20) do
  begin
    guess := guess + x div guess div 2;
    i := i + 1;
  end;
  result := guess;
  exit;
end;

function agmPi(): double;
var
  a: double;
  diff: double;
  g: double;
  pi: double;
  pow: double;
  sum: function(p0: Variant): double is nested;
  t: Variant;
  u: Variant;
begin
  a := 1;
  g := 1 div sqrtApprox(2);
  sum := 0;
  pow := 2;
  while (Abs(a - g) > 1e-15) do
  begin
    t := a + g div 2;
    u := sqrtApprox(a * g);
    a := t;
    g := u;
    pow := pow * 2;
    diff := a * a - g * g;
    sum := sum + diff * pow;
  end;
  pi := 4 * a * a div 1 - sum;
  result := pi;
  exit;
end;

procedure main();
begin
  writeln(FloatToStr(agmPi()));
end;

begin
  main();
end.
